# NanoLink

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  README_EN.md
.claude/: settings.local.json
.github/workflows/: apps-release.yml  auto-tag.yml  ci.yml  cleanup.yml  master-release.yml  release.yml  sdk-release.yml  test.yml  upload-to-r2.yml
agent/: Cargo.toml  build.rs  config.example.yaml  nanolink.yaml.example
agent/scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
agent/src/: config.rs  i18n.rs  main.rs  tui.rs
agent/src/buffer/: mod.rs
agent/src/collector/: cpu.rs  disk.rs  gpu.rs  layered.rs  memory.rs  mod.rs  network.rs  npu.rs  sessions.rs  system.rs
agent/src/connection/: grpc.rs  handler.rs  mod.rs  websocket.rs
agent/src/executor/: config_mgr.rs  docker_ops.rs  file_ops.rs  log_ops.rs  mod.rs  package_mgr.rs  process_mgr.rs  script_executor.rs  service_mgr.rs  shell.rs  update.rs
agent/src/gui/: mod.rs  wizard.rs
agent/src/management/: audit.rs  mod.rs  rate_limit.rs  token.rs
agent/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
agent/src/security/: auth.rs  mod.rs  permission.rs  validation.rs
agent/src/utils/: async_command.rs  mod.rs  safe_command.rs
agent/systemd/: nanolink-agent.service
apps/: README.md
apps/desktop/: README.md  index.html  package-lock.json  package.json  pubspec.yaml
apps/desktop/assets/i18n/: en.json  zh.json
apps/desktop/ios/Runner.xcodeproj/: project.pbxproj
apps/desktop/lib/: main.dart
apps/desktop/lib/models/: models.dart
apps/desktop/lib/providers/: app_provider.dart  theme_provider.dart
apps/desktop/lib/screens/: agent_detail_screen.dart  home_screen.dart
apps/desktop/lib/services/: server_service.dart  storage_service.dart  websocket_service.dart
apps/desktop/lib/theme/: app_theme.dart
apps/desktop/lib/widgets/: add_server_dialog.dart  agent_card.dart  empty_state.dart  server_chip.dart
apps/desktop/linux/: CMakeLists.txt
apps/desktop/macos/Runner.xcodeproj/: project.pbxproj
apps/desktop/macos/Runner/Configs/: AppInfo.xcconfig
apps/desktop/src/: App.vue  style.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  server.rs
apps/desktop/src/components/: AddServerModal.vue  AgentCard.vue  Dashboard.vue  ServerList.vue
apps/desktop/windows/runner/: Runner.rc
apps/docker/: Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml
apps/scripts/: generate-icons.sh
apps/server/: README.md  embed.go  go.mod  go.sum
apps/server/cmd/: main.go
apps/server/internal/config/: config.go
apps/server/internal/database/: database.go  metrics_history.go  models.go
apps/server/internal/grpc/: auth_interceptor.go  server.go
apps/server/internal/handler/: audit.go  auth_handler.go  config_gen.go  dashboard_ws.go  data_request.go  group_handler.go  handler.go  log_query.go  middleware.go  permission_handler.go  shell_ws.go  user_handler.go  websocket.go
apps/server/internal/mcp/: mcp.go  mcp_test.go  prompts.go  resources.go  tools.go  transport.go
apps/server/internal/proto/: nanolink.pb.go  nanolink_grpc.pb.go
apps/server/internal/proto/sdk/protocol/: nanolink.pb.go  nanolink_grpc.pb.go
apps/server/internal/service/: agent.go  audit.go  auth.go  group.go  metrics.go  metrics_persistence.go  permission.go
apps/server/internal/storage/: factory.go  influxdb.go  memory.go  timescaledb.go  timeseries.go
apps/server/web/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
apps/server/web/src/: App.tsx  App.vue  index.css  main.tsx  style.css
apps/server/web/src/components/: AgentCard.vue  GroupManagement.vue  LoginForm.vue  PermissionManagement.vue  SummaryCard.vue  UserManagement.vue  UserMenu.vue
apps/server/web/src/components/admin/: GroupManagement.tsx  UserManagement.tsx
apps/server/web/src/components/agents/: AddAgentWizard.tsx  AgentCard.tsx  GpuCard.tsx  NpuCard.tsx  SystemInfoCard.tsx  UserSessionsCard.tsx
apps/server/web/src/components/ui/: card.tsx  (+4 more)
apps/server/web/src/composables/: useAuth.js
apps/server/web/src/contexts/: AuthContext.tsx  DataContext.tsx
apps/server/web/src/hooks/: use-agents.ts  use-auth.ts  use-theme.ts  use-websocket.ts
apps/server/web/src/i18n/: en.json  index.ts  zh.json
apps/server/web/src/lib/: api.ts  utils.ts
dashboard/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
dashboard/src/: App.tsx  App.vue  index.css  style.css
dashboard/src/components/: CommandPanel.vue  DiskCard.vue  GpuCard.vue  MetricsChart.vue  ProcessList.vue  ServerCard.vue  SystemInfoCard.vue
dashboard/src/components/cards/: AgentCard.tsx  OverviewPanel.tsx
dashboard/src/components/charts/: RealtimeCharts.tsx
dashboard/src/components/ui/: badge-variants.ts  badge.tsx  card.tsx  progress.tsx  tabs.tsx
dashboard/src/composables/: useWebSocket.js
dashboard/src/hooks/: useMetricsHistory.ts  useWebSocket.ts
dashboard/src/lib/: utils.ts
dashboard/src/types/: metrics.ts
demo/: README.md
demo/go-gin/: README.md  go.mod  go.sum  main.go
demo/python-fastapi/: README.md  main.py  requirements.txt
demo/spring-boot/: README.md  pom.xml
demo/spring-boot/src/main/resources/: application.yml
docs/: DEVOPS_UPGRADE_PLAN.md  WORKFLOWS.md
scripts/: README.md  bump-version.ps1  bump-version.sh  install-hooks.ps1  install-hooks.sh  remove-bom.ps1  remove-bom.sh  version.json
scripts/hooks/: pre-commit
sdk/go/: go.mod  go.sum
sdk/go/nanolink/: command.go  connection.go  grpc_service.go  mcp_server.go  metrics.go  metrics_test.go  sanitize.go  server.go  server_test.go  version.go
sdk/go/nanolink/proto/: nanolink.pb.go  nanolink_grpc.pb.go
sdk/java/: pom.xml
sdk/protocol/: generate.sh  nanolink.proto
sdk/python/: README.md  pyproject.toml
sdk/python/nanolink/: __init__.py  connection.py  grpc_service.py  metrics.py  server.py
sdk/python/nanolink/proto/: nanolink_pb2.py  nanolink_pb2_grpc.py
sdk/python/tests/: test_metrics.py  test_server.py
(+55 files in other folders)
