[package]
name = "nanolink-agent"
version = "0.2.8"
edition = "2021"
authors = ["NanoLink Team"]
description = "Lightweight server monitoring agent"
license = "MIT"
repository = "https://github.com/chenqi92/nanolink"
keywords = ["monitoring", "agent", "server", "metrics"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# HTTP server for management API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Protobuf & gRPC
prost = "0.12"
prost-types = "0.12"
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tokio-stream = "0.1"
async-stream = "0.3"

# System metrics
sysinfo = "0.30"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
once_cell = "1.19"
hostname = "0.4"
glob = "0.3"
subtle = "2.5"           # P1-1: 常量时间比较
regex = "1.10"            # P0-2: Shell命令模式匹配
lazy_static = "1.4"       # P0-2: 静态正则表达式

# CLI
clap = { version = "4.4", features = ["derive"] }

# Platform-specific
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
winapi = { version = "0.3", features = ["processthreadsapi", "tlhelp32", "handleapi", "psapi"] }

[build-dependencies]
prost-build = "0.12"
tonic-build = "0.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[[bin]]
name = "nanolink-agent"
path = "src/main.rs"
