[package]
name = "nanolink-agent"
version = "0.3.7"
edition = "2024"
authors = ["NanoLink Team"]
description = "Lightweight server monitoring agent"
license = "MIT"
repository = "https://github.com/chenqi92/nanolink"
keywords = ["monitoring", "agent", "server", "metrics"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.85"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# HTTP server for management API
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Protobuf & gRPC
prost = "0.14"
prost-types = "0.14"
tonic = { version = "0.14", features = ["tls-ring", "tls-native-roots", "tls-webpki-roots"] }
tonic-prost = "0.14"
tokio-stream = "0.1"
async-stream = "0.3"

# System metrics
sysinfo = "0.34"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.16", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
once_cell = "1.21"
hostname = "0.4"
glob = "0.3"
subtle = "2.6"           # P1-1: 常量时间比较
regex = "1.11"           # P0-2: Shell命令模式匹配
sha2 = "0.10"            # Script checksum verification

# CLI
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
sys-locale = "0.3"
crossterm = "0.29"
atty = "0.2"

# TUI (Terminal User Interface)
ratatui = "0.29"

# GUI (optional)
eframe = { version = "0.33", optional = true, default-features = false, features = ["default_fonts", "glow"] }

[features]
default = []
gui = ["eframe"]

# Platform-specific
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["process", "signal"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
winapi = { version = "0.3", features = ["processthreadsapi", "tlhelp32", "handleapi", "psapi"] }

[build-dependencies]
prost-build = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[[bin]]
name = "nanolink-agent"
path = "src/main.rs"
