[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kkape-nanolink"
version = "0.2.0"
description = "Python SDK for NanoLink monitoring system"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "chenqi92", email = "chq19920301@163.com"}
]
keywords = ["monitoring", "metrics", "agent", "websocket", "kkape"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "websockets>=13.1",
    "protobuf>=5.29.2",
    "aiohttp>=3.9.0",  # 3.11+ requires Python 3.9+
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.2.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/chenqi92/NanoLink"
Documentation = "https://github.com/chenqi92/NanoLink#readme"
Repository = "https://github.com/chenqi92/NanoLink"
Issues = "https://github.com/chenqi92/NanoLink/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
